# APEX

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bootstrap/: __init__.py  config.py  dependency_manager.py  diagnostics.py  installer.py  launcher.py  manager.py  migration.py  repository_manager.py  validator.py  version_manager.py
docs/: API_REFERENCE.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  INSTALLATION.md  Memory_Workspace_Architecture.md  Model_Runtime_Architecture.md  RELEASE_PROCESS.md  Server_API_Architecture.md  User_Interface_Architecture.md
examples/: beginner.config.json  fast.config.json  quality.config.json
notebook/: APEX.ipynb
runtime/: __init__.py
runtime/api/: audio.py  authentication.py  chat.py  completion.py  configuration.py  embeddings.py  endpoints.py  errors.py  events.py  files.py  health.py  images.py  manager.py  metrics.py  middleware.py  models.py  openai.py  queue.py  responses.py  router.py  runtime.py  schemas.py  security.py  serializers.py  server.py  state.py  streaming.py  tunnel.py  validation.py  version.py  vision.py  websocket.py
runtime/config/: __init__.py  manager.py  profile.py  schema.py
tests/: test_api.py  test_bootstrap.py  test_config.py  test_engines.py  test_health_and_errors.py  test_logging.py  test_memory.py  test_model_manager.py  test_orchestrator.py  test_server.py  test_ui.py  test_utils.py  test_validation.py
(+70 files in other folders)
