[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apex-runtime"
version = "1.0.0"
authors = [
    { name = "APEX Contributors", email = "maintainers@apex-project.org" }
]
description = "Adaptive Platform for Unified AI Platform Configuration, Orchestration and Workspace Management"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: FastAPI",
    "Framework :: Jupyter",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "huggingface_hub>=0.16.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pyngrok>=6.0.0",
]
ml = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.urls]
Homepage = "https://github.com/Nikhil-Kumar-Shah/APEX"
BugTracker = "https://github.com/Nikhil-Kumar-Shah/APEX/issues"

[tool.setuptools]
packages = ["runtime", "bootstrap"]
